# sporepedia.py

./: .coveragerc  .gitignore  Makefile  README.md  data.json  mypy.ini  pyinstaller.spec  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: python-package.yml
meta/: partial_searchAssetsDWR  searchAssetsDWR.dwr
meta/searchAssetsDWR/: full  minimal
sporepedia/: __init__.py  __main__.py  api.py  builders.py  client.py  composers.py  constants.py  dwr_parser.py  enums.py  errors.py  models.py  parser.py
sporepedia/api/: __init__.py  builders.py  client.py  composers.py  dwr_parser.py  mixin_protocol.py  mockups.py  models.py
sporepedia/api/methods/: __init__.py  dwr_parser.py  mixin_protocol.py
sporepedia/api/methods/mixins/: __init__.py
sporepedia/api/methods/mixins/search/: __init__.py  builders.py  composers.py  methods.py  models.py
sporepedia/api/methods/search/: __init__.py  builders.py  composers.py  methods.py  mockups.py  models.py
tests/: test_api.py  test_builders.py  test_cli.py  test_client.py  test_composers.py  test_dwr_parser.py  test_parser.py  test_search.py  utils.py
tests/testdata/: dwr_1000creation_search_result.js  dwr_1000creation_search_result.json  dwr_1000creation_search_result.pickle  dwr_exception.js  dwr_search_testdata.js  dwr_search_testdata.json
tests/utils/: datetime.py  json.py
