[tool.poetry]
name = "sporepedia.py"
version = "0.1.0"
description = "Unofficial API client for sporepedia (https://www.spore.com/sporepedia)"
authors = ["LEv145"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
aiohttp = "^3.8.1"
dataclasses-json = "^0.5.6"
asyncclick = "^8.0.1"
anyio = "^3.4.0"
regex = "^2021.11.10"
Js2Py = "^0.71"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
mkinit = "^0.3.3"
black = "^21.11b1"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
